depends_compile_tests/tests/fail/derive/graph/bad_attr_spec.stderr
error: Vertex `comment` has no label
 --> tests/fail/derive/graph/bad_attr_spec.rs:9:17
  |
9 |         comment [class="Comments"];
  |                 ^^^^^^^^^^^^^^^^^^

error: Edge `comment -> comment_to_post` has no label
  --> tests/fail/derive/graph/bad_attr_spec.rs:21:36
   |
21 |         comment -> comment_to_post [class="Dependencies2"];
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^
